--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,6 +227,7 @@ align-self: center;
     font-size: 30px;
     font-family: Verdana;
     margin-bottom: 30px;
+    margin-left: 74px;
 }
 
 /* .chatPage:after{
